--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -250,7 +250,8 @@ h3:after {
 .special-effect-6,
 .special-effect-7,
 .special-effect-8,
-.special-effect-9 {
+.special-effect-9,
+.special-effect-10 {
   opacity: 0;
 }
 
@@ -262,7 +263,8 @@ h3:after {
 .special-effect-6.animated,
 .special-effect-7.animated,
 .special-effect-8.animated,
-.special-effect-9.animated {
+.special-effect-9.animated,
+.special-effect-10.animated {
   opacity: 1;
 }
 
